--- a/test_project/polls/templates/hello.html
+++ b/test_project/polls/templates/hello.html
@@ -3,7 +3,7 @@
 </head>
 <body>
     {% if name%}
-    <h1>Hello...{{name}}</h1>
+    <h1>Database value is===={{name}}</h1>
     {% else %}
     <h1>Unknown person</h1>
     {%endif%}
